# SolarTherm

./: .gitignore  .readthedocs.yaml  .travis.yml  CMakeLists.txt  README.md  SConstruct  dsin.txt  package.mo  package.order
.github/workflows/: dakota.yml  main.yml  msys2.yml  particle_master_intermediate.yml
CoolProp2Modelica/: TestSCO2PB.mo  Turbine.mo  install_CoolProp.sh  libCoolProp.so.6
CoolProp2Modelica/CarbonDioxide_ph/: package.mo
Examples/: .gitignore  ASTRI100.mo  DishSG4.mo  EnergySystem.mo  FluidSystem.mo  SimpleSystem.mo  SystemAnalysis_startup.mo  TroughWagner.mo  package.mo  package.order
Examples/SolarTower/: package.mo  package.order  reference_1.mo  reference_1_fluid.mo
Examples/Step_by_step/: ControlSystem1.mo  ControlSystem2.mo  Sun.mo  SunHeliostats.mo  SunHeliostatsReciever.mo  SunHeliostatsRecieverTank.mo  SunHeliostatsRecieverTankHeatExchanger.mo  SystemAnalysis.mo  package.mo
Icons/: HeliostatsPackage.mo  PumpModel.mo
Interfaces/Connectors/: SolarPort_b.mo
Interfaces/Models/: Pipe.mo  PowerBlock.mo  Pump.mo  Receiver.mo  Temperature.mo
Media/: package.mo  package.order
Media/Sodium/: package.order
Models/Analysis/: Performance.mo
Models/Control/: TankDispatch.mo  package.order
Models/Fluid/: package.order
Models/PowerBlocks/: FluidPB.mo  GenericParasitics.mo  PowerBlock.mo
Models/Sources/: DataTable_obsolete.mo
STLib/: ControlSimple.mo  GenSimple.mo  PortSimple.mo  SolarSimple.mo  TankSimple.mo  package.mo
SolarTherm/: ControlSimple.mo  GenSimple.mo  PortSimple.mo  SolarSimple.mo  TankSimple.mo  Validation.mo  modelica-swtich version  package.mo  package.order
SolarTherm/Analysis/: Finances.mo  Performance.mo  package.mo
SolarTherm/Calculators/: Annual_Solar_Resource.mo  Fluid_Properties_Test.bak-mo  Fluid_Properties_Test_pT.bak-mo  Fluid_Properties_Test_ph.bak-mo  Heat_Sink.mo  Heat_Sink_v2.mo  OpticsFileReader.mo  Packed_Bed_Spherical_Filler_PressureDrop.mo  Planar_Insulation.mo  Planar_Insulation_Parametric.mo  Planar_Insulation_Parametric_OneLayer.mo  Planar_Insulation_Parametric_OneLayer_Rockwool.mo  Radial_Insulation_SodiumBoiler_Downcomer.mo  Radial_Insulation_SodiumBoiler_Riser.mo  (+2 more)
Systems/: package.mo  package.order
Types/: EnergyPrice_MWh.mo  EnergyPrice_kWh.mo  Money.mo  package.order
Utilities/: package.mo  package.order
doc/: Makefile  installation.html  make.bat  simple_model.html
examples/: .gitignore  .~lock.SodiumPhase2.xlsx#  ASTRI100.mo  AnnualOpticalBeamDown.mo  AnnualOpticalBeamDown_Solstice.mo  AnnualOpticalBeamDown_SolsticeOnly.mo  BasicSystem.mo  CMakeLists.txt  Combined1.mo  ComparisonTableSolarTherm.py  DishSG4.mo  EffCurve_Rcv1D.mo  EffCurve_Rcv1D_Surrogate.mo  EnergySystem.mo  FlowPathStress.mo  FlowPathStressSalt.mo  FluidSystem  FluidSystem.mo  FunctionTestPhysicalParticleCO21D.py  GemasolarSystem.mo  GemasolarSystemOperation.mo  GenericSystem.mo  HeliostatsIPH.mo  HighTemperatureSaltSystem.mo  Hybrid_CSP_PV_Particle.mo  Hybrid_CSP_PV_Particle_H2storage.mo  Hybrid_CSP_PV_Particle_HotH2_Burner.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_NoH2Stg.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_NoH2Stg2.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_NoTES.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_NoTES2.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_OptDispatch.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_OptDispatch2.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_OptDispatch3.mo  Hybrid_CSP_PV_Particle_HotH2_Burner_OptDispatch_TEST.mo  Hybrid_CSP_PV_Particle_Try.mo  Hybrid_CSP_PV_Particle_for_presentation_purpose.mo  Hybrid_CSP_PV_Particle_old.mo  NaGraphiteCO2System.mo  NaSaltSCO2System.mo  (+142 more)
resources/: SConscript
src/: CMakeLists.txt  SConscript  TestExternalC.c  TestExternalC.h
src/c/: CMakeLists.txt  st_tables.c  st_tables.h  table.c  table.h
src/c/solinterp/: interpolation.c  symmetries.c
src/python/: .gitignore  CMakeLists.txt  SConscript  setup.py.in
src/python/examples/: run_energy.py  run_optimisation.py  run_simple  run_simple.py
src/python/scripts/: TMY3_to_motab.py  st_contingency  st_conv_sam_hourly  st_cost  st_get_aemo_prices  st_inspect  st_optimise  st_parsweep  st_plotmat  st_sensitivity  st_simulate  st_simulate_2  st_wea_to_mo
src/python/solartherm/: __init__.py.in  chpar.py  contingency.py  dakota.py  dakota_st_interface.py  finances.py  optimisation.py  params.py  plotting.py  postproc.py  resparser.py  simulation.py
src/python/surrogate_receiver_generation/: generate_surrogate_receiver.py  variables.csv
src/python/surrogate_receiver_generation/neural_network/: bayesian.py  data.py
src/python/utilities/: CMakeLists.txt  st_wea_to_mo.py
src/python/wheel/: solartherm-0.2-py3-none-any.whl
test/: CMakeLists.txt  TestCommand.py  TestExternalC.mo  TestExternalC.py  TestFluxMapFile.mo  TestFluxMapFile.py  TestOptEffCatrom.mo  TestOptEffCatrom.py  TestOptEffFile.mo  TestOptEffFile.py  TestOptimisation.mo  TestOptimisation.py  TestSTTable.mo  TestScheduler.mo  TestSolarPosition.mo  TestSolarPosition.py  TestSteeredConc.mo  TestWeatherFileChecker.mo  TestWeatherFileChecker.py  TestWeatherSource.mo  TestWeatherSource.py  TestWeatherTable.py  run_simple.py
test/resources/: flux.motab
tests/: .gitignore  .noseids  CMakeLists.txt  ParameterGames.mo  ParticleReceiver1D_standalone.mo  ParticleReceiver1D_standalone_res_0.mat  Reference_1  SConscript  SaltSCO2System  Sodium_CO2System.mo  Sodium_CO2System_v3.mo  Sodium_CO2System_v4.mo  SolarMethanolSystem  TestCatromOE.mo  TestCatromOE.py  TestCommand.mo  TestCommand.py  TestExternalC.mo  TestExternalC.py  TestExternalPyFunc.mo  TestExternalPyFunction.py  TestExternalPyStr.mo  TestExternalPyString.py  TestFileOE.mo  TestFlowPathStress.py  TestFlowPathStressSalt.py  TestFluidSystem.py  TestGemasolarOperation.py  TestGenEffectivenessPyFunc.mo  TestGenEffectivenessPyFunc.py  TestGenericTrough.py  TestGraphiteProperty.mo  TestGraphiteProperty.py  TestLcoePeaker.py  TestLinprog.py  TestLoadPredictExistingSurrogate.mo  TestMoltenSaltMedium.mo  TestMoltenSaltMedium.py  TestMultipleCombiTable2D.mo  TestNaPBsCO2.py  (+148 more)
(+42235 files in other folders)
